--- a/flaskps/templates/auth/panel_components/administracion_sitio.html
+++ b/flaskps/templates/auth/panel_components/administracion_sitio.html
@@ -1,6 +1,6 @@
 {% extends "auth/panel.html" %}
 {% block contenttitle %}
-<i class="fas fa-globe-americas black3 mr-2"></i>Administración del sitio
+<i class="fas fa-cog mr-2"></i>Configuración del sitio
 {% endblock %}
 {% block contentitem %}
     <div class="row">
