--- a/flaskps/templates/auth/panel_components/usuarios.html
+++ b/flaskps/templates/auth/panel_components/usuarios.html
@@ -20,10 +20,10 @@
                                     <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home"
                                     aria-selected="true">Nombre de usuario</a>
                                 </li>
-                                <!--li class="nav-item">
+                                <li class="nav-item">
                                     <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile"
                                     aria-selected="false">Actvio/Bloqueado</a>
-                                </li-->
+                                </li>
                             </ul>
                             <div class="tab-content" id="myTabContent">
                                 <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
@@ -40,24 +40,22 @@
                                         </div>
                                     </form>
                                 </div>
-                                <!--div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+                                <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
                                     <form action="{{ url_for('panel_usuarios') }}" method="GET" class="py-4">
                                         <div class="row">
-                                             Apellido  
                                             <div class="col-12 col-md-8 my-1">
                                                 <select name="active" class="browser-default custom-select" required>
                                                     <option selected disabled>Seleccionar</option>
                                                     <option value="1">Activo</option>
                                                     <option value="0">Bloqueado</option>
                                                 </select>
-                                            </div>
-                                             Search  
+                                            </div>  
                                             <div class="col-12 col-md-4 my-1">
                                                 <button type="submit" class="btn btn-primary btn-block">Buscar<i class="fas fa-arrow-right ml-3"></i></button>
                                             </div>
                                         </div>
                                     </form>
-                                </div-->
+                                </div>
                             </div>
                         </div>
                     </div>  
@@ -111,11 +109,11 @@
                                     <input type="hidden"  name="user_id" value="{{row.id}}">                          
                                     {% if row.activo == 1 %}
                                     <span class="mr-2">Activo</span>
-                                    <input type="hidden"  name="activo" value="0">
+                                    <input type="hidden" name="activo" value="0">
                                     <button type="submit" class="btn btn-warning btn-sm"><i class="fas fa-retweet mr-2"></i>Desactivar</a>
                                     {% else %}
                                     <span class="mr-2">Inactivo</span>
-                                    <input type="hidden"  name="activo" value="1">
+                                    <input type="hidden" name="activo" value="1">
                                     <button type="submit" class="btn btn-warning btn-sm"><i class="fas fa-retweet mr-2"></i>Activar</a>
                                     {% endif %}
                                 </form>
