--- a/flaskps/templates/auth/panel_components/usuarios.html
+++ b/flaskps/templates/auth/panel_components/usuarios.html
@@ -157,7 +157,7 @@
             <div id="usuarioCreate" class="modal fade" role="dialog">
                 <div class="modal-dialog">
                     <div class="modal-content">
-                        <form action="{{ url_for('insert_user') }}" method="POST" id="sectionForm" name="form1" onSubmit = "ValidateEmail(document.form1.email); return checkPassword(this)"> 
+                        <form action="{{ url_for('insert_user') }}" method="POST" id="sectionForm" name="form1" onSubmit = "return ValidateEmail(this);"> 
                             <div class="modal-header">
                                 <h4 class="modal-title">Ingresar datos</h4>
                                 <button type="button" class="close" onclick="this.form.reset();" data-dismiss="modal">&times;</button>
@@ -230,18 +230,21 @@
 
                                                 init();
                                             })();
-                                            function ValidateEmail(inputText)
+                                            function ValidateEmail(form)
                                             {
                                                 var mailformat = /^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$/;
-                                                if(inputText.value.match(mailformat))
+                                                if(form.email.value.match(mailformat))
                                                 {
-                                                document.form1.text1.focus();
-                                                return true;
+                                                    if (!checkPassword(form)){
+                                                        return false
+                                                    }
+                                                    form.email.focus();
+                                                    return true;
                                                 }
                                                 else
                                                 {
-                                                alert("Email inválido");
-                                                    document.form1.text1.focus();
+                                                    alert("Email inválido");
+                                                    form.email.focus();
                                                     return false;
                                                 }
                                             } 
@@ -252,6 +255,9 @@
                                                     if (password1 != password2) { 
                                                         alert ("\nLas contraseñas no coinciden") 
                                                         return false; 
+                                                    }
+                                                    else {
+                                                        return true;
                                                     }
                                                 }
 
@@ -264,7 +270,7 @@
                                         <button class="btn btn-light black2" onclick="this.form.reset();" data-dismiss="modal">Cancelar</button>
                                     </div>
                                     <div class="col-6 text-right">
-                                        <button class="btn btn-primary" type="submit" onclick="ValidateEmail(document.form1.email)">Crear usuario</button>
+                                        <button class="btn btn-primary" type="submit">Crear usuario</button>
                                     </div>
                                 </div>
                             </form>
