vue js instalación + reemplazo de archivos estaticos

--- a/flaskps/static/css/style.css
+++ b/flaskps/static/css/style.css
@@ -5,6 +5,9 @@
 /*--------------------------------------------------------------
     General
 --------------------------------------------------------------*/
+:root {
+    --success: #00ED96 !important;
+}
 * {
     font-family: 'Muli', sans-serif;
 }
