--- a/flaskps/templates/auth/panel_components/alumnos_docentes.html
+++ b/flaskps/templates/auth/panel_components/alumnos_docentes.html
@@ -10,45 +10,48 @@
             <div class="row">
                 <div class="col-12">
                     <div class="table-responsive">
-                        <table class="table table-striped">
-                            <!-- Row Titulos -->
-                            <tr>
-                                <th>Año</th>
-                                <th>Semestre</th>
-                                <th>Inicio</th>
-                                <th>Fin</th>
-                                <th>Taller</th>
-                                <th>Docente</th>
-                                <th>Estudiante</th>
-                                {% for p in permisos %}
-                                {% if p.nombre == 'administrativo_destroy' %}
-                                <th>Eliminar</th>
-                                {% endif %}
+                        <table id="dtBasicExample" class="table table-striped table-bordered" cellspacing="0" width="100%">
+                            <thead>
+                                <!-- Row Titulos -->
+                                <tr>
+                                    <th>Año</th>
+                                    <th>Semestre</th>
+                                    <th>Inicio</th>
+                                    <th>Fin</th>
+                                    <th>Taller</th>
+                                    <th>Docente</th>
+                                    <th>Estudiante</th>
+                                    {% for p in permisos %}
+                                    {% if p.nombre == 'administrativo_destroy' %}
+                                    <th>Eliminar</th>
+                                    {% endif %}
+                                    {% endfor %}
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <!-- Row Estudiantes -->
+                                {% for es in estudiantes_talleres %}
+                                <tr>
+                                    <td>{{es.año}}</td>
+                                    <td>Semestre {{es.semestre}}</td>
+                                    <td>{{es.fecha_ini}}</td>
+                                    <td>{{es.fecha_fin}}</td>
+                                    <td>{{es.nombretaller}}</td>
+                                    <td>{{es.nombredocente}} {{es.apellidodocente}}</td>
+                                    <td>{{es.nombreestudiante}} {{es.apellidoestudiante}}</td>
+                                    {% for p in permisos %}
+                                    {% if p.nombre == 'administrativo_destroy' %}
+                                    <td>
+                                        <form action="{{ url_for('delete_estudiante_docente') }}" method="POST" onsubmit="return confirm('¿Seguro deseas desasignar el estudiante del taller y docente?')"> 
+                                            <input type="hidden" name="estudiante_id" value="{{es.estudiante_id}}">
+                                            <input type="hidden" name="docente_responsable_taller_id" value="{{es.docente_responsable_taller_id}}">
+                                            <button type="submit" class="btn btn-danger btn-sm"><i class="fas fa-user-minus mr-2"></i>Eliminar</button>
+                                        </form>
+                                    </td>
+                                    {% endif %}
+                                    {% endfor %}
+                                </tr>
                                 {% endfor %}
-                            </tr>
-                            <!-- Row Estudiantes -->
-                            {% for es in estudiantes_talleres %}
-                            <tr>
-                                <td>{{es.año}}</td>
-                                <td>Semestre {{es.semestre}}</td>
-                                <td>{{es.fecha_ini}}</td>
-                                <td>{{es.fecha_fin}}</td>
-                                <td>{{es.nombretaller}}</td>
-                                <td>{{es.nombredocente}} {{es.apellidodocente}}</td>
-                                <td>{{es.nombreestudiante}} {{es.apellidoestudiante}}</td>
-                                {% for p in permisos %}
-                                {% if p.nombre == 'administrativo_destroy' %}
-                                <td>
-                                    <form action="{{ url_for('delete_estudiante_docente') }}" method="POST" onsubmit="return confirm('¿Seguro deseas desasignar el estudiante del taller y docente?')"> 
-                                        <input type="hidden" name="estudiante_id" value="{{es.estudiante_id}}">
-                                        <input type="hidden" name="docente_responsable_taller_id" value="{{es.docente_responsable_taller_id}}">
-                                        <button type="submit" class="btn btn-danger btn-sm"><i class="fas fa-user-minus mr-2"></i>Eliminar</button>
-                                    </form>
-                                </td>
-                                {% endif %}
-                                {% endfor %}
-                            </tr>
-                            {% endfor %}
                             </tbody>
                         </table>
                     </div>
