Dashboard Structure with slots

--- a/frontend/src/assets/css/lightseed.css
+++ b/frontend/src/assets/css/lightseed.css
@@ -3,8 +3,8 @@
     --color-a: #0da084;
     --color-a-light: #e3f5f3;
 
-    --color-b: rgb(38, 92, 173);
-    --color-b-light: rgba(38, 92, 173, 0.2);
+    --color-b: #0da084;
+    --color-b-light: #bcf1eb;
     
     --color-c: #5ca34a;
     --color-c-light: #d1ebd0;
