fixed api issues

--- a/frontend/src/assets/css/lightseed.css
+++ b/frontend/src/assets/css/lightseed.css
@@ -23,7 +23,7 @@
 
     /* Black */
     --black-a: #212224;
-    --black-b: #363728;
+    --black-b: #41444b;
     --black-c: #505565;
     --black-d: #8c92a6;
 
