--- a/frontend/src/assets/css/lightseed.css
+++ b/frontend/src/assets/css/lightseed.css
@@ -4,7 +4,8 @@
     --color-a-light: #8799e0;
 
     /* --color-b: #2ac28c; */
-    --color-b: #1da783;
+    /* --color-b: #1da783; */
+    --color-b: #00b894;
     --color-b-light: #f5f8fd;
       
     --color-c: #040613;
@@ -25,7 +26,7 @@
     --black-d: #bfbec3;
 
     /* Traditional */
-    --seed-primary: #444BF8;
+    --seed-primary: #47a1fc;
     --seed-primary-dark: #251f87;
     --seed-primary-light: #E9EAFD;
 
@@ -33,15 +34,18 @@
     --seed-secondary-dark: #0a947d;
     --seed-secondary-light: #A1ECDB;
 
-    --seed-success: #1be098;
+    /* --seed-success: #1be098; */
+    --seed-success: #55efc4;
     --seed-success-dark: #07b536;
     --seed-success-light: #E5FDF4;
 
-    --seed-warning: #F1BE25;
+    /* --seed-warning: #ffd100; */
+    --seed-warning: #f8bc4d;
     --seed-warning-dark: #ff8800;
     --seed-warning-light: #FDF8E9;
     
-    --seed-danger: #F12559;
+    /* --seed-danger: #F12559; */
+    --seed-danger: #ff7675;
     --seed-danger-dark: #F12559;
     --seed-danger-light: #F12559;
     
@@ -158,7 +162,7 @@ input[type=number] {
     background-color: #f5f5f5;
 }
 ::-webkit-scrollbar-thumb {
-    background-color: #333;
+    background-color: var(--color-b);
     border: 2px solid #555555;
 }
 
