--- a/frontend/src/assets/css/lightseed.css
+++ b/frontend/src/assets/css/lightseed.css
@@ -1,18 +1,16 @@
 :root {
     /* Main Pallete */
-    --color-a: #26377c;
-    --color-a-light: #8799e0;
+    /* --color-a: #2699fb; */
+    --color-a: #009ee3  ;
+    --color-b: #7fc4fd;
+    --color-c: #bce0fd;
+    --color-d: #f1f9ff;
+
+    --green-strong: #05ffa3;
 
     /* --color-b: #2ac28c; */
     /* --color-b: #1da783; */
     /* --color-b: #00b894; */
-    --color-b: #545cd8;
-    --color-b-light: #f5f8fd;
-      
-    --color-c: #040613;
-    --color-c-light: #f5f6f8;
-
-    --green-strong: #05ffa3;
 
     /* White */
     --white-a: #ffffff;
@@ -21,9 +19,9 @@
     --white-d: #d0d2d6;
 
     /* Black */
-    --black-a: #0b0b15;
-    --black-b: #41444b;
-    --black-c: #505565;
+    --black-a: #41444b;
+    --black-b: #5f626d;
+    --black-c: #6a6f80;
     --black-d: #bfbec3;
 
     /* Traditional */
@@ -264,6 +262,11 @@ a.link:hover {
     border-color: var(--color-c) !important;
     color: var(--white-a) !important;
 }
+.seed-btn-d {
+    background-color: var(--color-b) !important;
+    border-color: var(--color-b) !important;
+    color: var(--white-a) !important;
+}
 .seed-btn-primary {
     background-color: var(--seed-primary) !important;
     border-color: var(--seed-primary) !important;
@@ -301,20 +304,10 @@ a.link:hover {
 }
 
 /* Light colors */
-.seed-btn-a-light {
-    background-color: var(--color-a-light) !important;
-    border-color: var(--color-a-light) !important;
+.seed-btn-light {
+    background-color: var(--color-d) !important;
+    border-color: var(--color-d) !important;
     color: var(--color-a) !important;
-}
-.seed-btn-b-light {
-    background-color: var(--color-b-light) !important;
-    border-color: var(--color-b-light) !important;
-    color: var(--color-b) !important;
-}
-.seed-btn-c-light {
-    background-color: var(--color-c-light) !important;
-    border-color: var(--color-c-light) !important;
-    color: var(--color-c) !important;
 }
 
 /* Button outline color */
@@ -368,16 +361,9 @@ a.link:hover {
     Font color
 --------------------------------------------------------------*/
 .color-a { color: var(--color-a) !important;}
-.color-a-dark { color: var(--color-a-dark) !important;}
-.color-a-light { color: var(--color-a-light) !important;}
-
 .color-b { color: var(--color-b) !important;}
-.color-b-dark { color: var(--color-b-dark) !important;}
-.color-b-light { color: var(--color-b-light) !important;}
-
 .color-c { color: var(--color-c) !important;}
-.color-c-dark { color: var(--color-c-dark) !important;}
-.color-c-light { color: var(--color-c-light) !important;}
+.color-d { color: var(--color-d) !important;}
 
 /* White */
 .white-a { color: var(--white-a) !important; }
@@ -428,16 +414,9 @@ a.link:hover {
     Background Colors
 --------------------------------------------------------------*/
 .bg-color-a { background-color: var(--color-a) !important;}
-.bg-color-a-dark { background-color: var(--color-a-dark) !important;}
-.bg-color-a-light { background-color: var(--color-a-light) !important;}
-
 .bg-color-b { background-color: var(--color-b) !important;}
-.bg-color-b-dark { background-color: var(--color-b-dark) !important;}
-.bg-color-b-light { background-color: var(--color-b-light) !important;}
-
 .bg-color-c { background-color: var(--color-c) !important;}
-.bg-color-c-dark { background-color: var(--color-c-dark) !important;}
-.bg-color-c-light { background-color: var(--color-c-light) !important;}
+.bg-color-d { background-color: var(--color-d) !important;}
 
 /* White */
 .bg-white-a { background-color: var(--white-a) !important; }
@@ -488,16 +467,12 @@ a.link:hover {
 /*--------------------------------------------------------------
     Bootstrap override
 --------------------------------------------------------------*/
-.btn-outline-success {
-    background-color: var(--white-a) !important;
-    border-color: var(--color-b) !important;
-    color: var(--color-b) !important;
-}
-.btn-outline-success:hover {
-    border-color: var(--seed-success) !important;
-    color: var(--seed-success) !important;
-}
+/* .btn-primary {
 
+} */
+.text-warning {
+    color: var(--seed-warning);   
+}
 li.page-item.active {
     background-color: var(--color-b) !important;
 }
