--- a/frontend/src/assets/css/lightseed.css
+++ b/frontend/src/assets/css/lightseed.css
@@ -29,7 +29,7 @@
     --seed-primary-dark: #251f87;
     --seed-primary-light: #E9EAFD;
 
-    --seed-secondary: #00C9A7;
+    --seed-secondary: #a29bfe;
     --seed-secondary-dark: #0a947d;
     --seed-secondary-light: #A1ECDB;
 
@@ -146,23 +146,6 @@ input::-webkit-inner-spin-button {
 }
 input[type=number] {
     -moz-appearance:textfield; /* Firefox */
-}
-
-/*--------------------------------------------------------------
-    Scrollbar
---------------------------------------------------------------*/
-::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-    background-color: #f5f5f5;
-}
-::-webkit-scrollbar {
-    width: 5px;
-    background-color: #f5f5f5;
-}
-::-webkit-scrollbar-thumb {
-    background-color: var(--color-b);
-    border: 2px solid #555555;
 }
 
 /*--------------------------------------------------------------
@@ -476,3 +459,11 @@ a.link:hover {
 li.page-item.active {
     background-color: var(--color-b) !important;
 }
+
+/* th,
+.th-sm,
+th.th-sm,
+th.sorting {
+  color: var(--black-b) !important;
+  font-weight: 600 !important;
+} */
